2004-10-22  Marcus Brinkmann  <marcus@gnu.org>

	* driver.c (driver_start): Don't underflow I.

2004-09-29  Alfred M. Szmidt  <ams@kemisten.nu>

	* Makefile (vga-CPPFLAGS): New variable.

	* vga.c (DEFAULT_VGA_FONT, DEFAULT_VGA_FONT_ITALIC)
	(DEFAULT_VGA_FONT_BOLD, DEFAULT_VGA_FONT_BOLD_ITALIC): Use
	`DEFAULT_VGA_FONT_DIR' instead of hardcoding the filename.

2004-03-21  Marco Gerards  <metgerards@student.han.nl>

	* console.c (main): Make sure the arguments are	parsed in order.
	* driver.c (driver_add):  Set up argc and argv so they can be used
	by argp.
	* generic-speaker.c: Include <string.h> and <argp.h>.
	(struct melody): New member `name'.  Every melody was given a
	name.
	(BELL_CLASSIC, BELL_LINUX, BELL_ALARM, BELL_CMAJOR): New macros.
	(doc, options, argp): New variables.
	(parse_opt): New function.
	(generic_speaker_init): Parse the arguments using argp.
	* vga.c (doc, options, argp): New variables.
	(parse_opt): New function.
	(parse_startup_args): Function removed.
	(vga_display_init): Use argp_parse instead of parse_startup_args.

2004-03-07  Marco Gerards  <metgerards@student.han.nl>

	* bdf.c (bdf_read): Change the types of has_size, has_fbbx,
	has_metricset, glyph_has_encoding, glyph_has_bbx, glyph_bwidth,
	glyph_bheight and glyph_blines to unsigned int.
	* bell.h (struct bell_ops): Change the type of the argument KEY of
	the interface `deprecated' to unsigned int.  All callers changed.
	* display.h (struct display_ops): Changed the type of the
	arguments width and height to unsigned int.  All callers changed.
	* driver.c (driver_fini): Change the type of `i' to unsigned int
	to silence a gcc warning.
	(driver_start): Likewise.
	(driver_remove): Likewise.
	(ADD_REMOVE_COMPONENT): Likewise.
	(driver_add): Likewise.
	* generic-speaker.c (beep_on): Cup pitch at 20000, not 327677.
	Also silences a gcc warning.
	* ncursesw.c: Changed all calls to the function `ncurses_refresh'
	to `refresh_screen'.
	(current_width): Changed type to unsigned int.